criando o hero e importando a fonte Avenir

--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "yargs-parser": "^20.2.9"
   },
   "scripts": {
+    "dev": "gulp watch",
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -177,7 +178,8 @@
   },
   "homepage": "https://github.com/Jeferson7770/clone_disneyplus#readme",
   "devDependencies": {
-    "gulp": "^5.0.1",
+    "gulp": "^4.0.2",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^6.0.1",
     "sass": "^1.92.0"
   }
